--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,4 +14,29 @@
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+
+  <ion-list padding>
+    <button ion-button block (click)="startScanning()">scan</button>
+    <ion-list-header>
+      Paired Devices
+    </ion-list-header>
+    <ion-item *ngFor="let device of pairedDevices">
+      {{device.name}}
+    </ion-item>
+
+    <button ion-button block (click)="disconnect()">Disconnect</button>
+
+    <ion-list-header>
+      availlable Devices
+    </ion-list-header>
+
+    <ion-item *ngFor='let device of unpairedDevices'>
+      <span (click)="selectDevice(device.address)">
+        {{device.name}}
+      </span>
+    </ion-item>
+
+    <ion-spinner name="crescent" *ngIf="gettingDevices"></ion-spinner>
+    
+  </ion-list>
 </ion-content>
